--- a/CodeHubDesktop/Views/About.xaml
+++ b/CodeHubDesktop/Views/About.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"
-             xmlns:lang="clr-namespace:CodeHubDesktop.Language"
+             xmlns:lang="clr-namespace:CodeHubDesktop.MultiLanguage.Language"
              xmlns:ext="clr-namespace:CodeHubDesktop.DynamicLanguage"
              ext:Translation.ResourceManager="{x:Static lang:Lang.ResourceManager}"
              xmlns:hc="https://handyorg.github.io/handycontrol"
