--- a/CodeHubDesktop/Views/CreateSnippet.xaml
+++ b/CodeHubDesktop/Views/CreateSnippet.xaml
@@ -1,9 +1,46 @@
 ﻿<UserControl x:Class="CodeHubDesktop.Views.CreateSnippet"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:prism="http://prismlibrary.com/"             
+             xmlns:prism="http://prismlibrary.com/" 
+             xmlns:hc="https://handyorg.github.io/handycontrol"
+             xmlns:control="clr-namespace:CodeHubDesktop.Controls"
+             xmlns:lang="clr-namespace:CodeHubDesktop.MultiLanguage.Language"
+             xmlns:ext="clr-namespace:CodeHubDesktop.DynamicLanguage"
+             ext:Translation.ResourceManager="{x:Static lang:Lang.ResourceManager}"
              prism:ViewModelLocator.AutoWireViewModel="True">
-    <Grid>
-            
-    </Grid>
+    <hc:TransitioningContentControl>
+        <hc:ScrollViewer>
+            <StackPanel Margin="10">
+                <hc:TextBox Margin="10,0" Text="{Binding Subject, UpdateSourceTrigger=PropertyChanged}" hc:InfoElement.Placeholder="{ext:Loc Subject}" hc:TitleElement.Title="{ext:Loc SubjectTitle}"/>
+                <hc:TextBox Text="{Binding Detail, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" TextAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Top" Margin="10" Height="150" hc:InfoElement.Placeholder="{ext:Loc Detail}" hc:TitleElement.Title="{ext:Loc DetailTitle}"/>
+                <hc:ComboBox SelectedItem="{Binding SelectedCode, UpdateSourceTrigger=PropertyChanged}" IsEditable="True" Name="cmb" ItemsSource="{Binding LanguageList}" hc:InfoElement.Placeholder="{ext:Loc SelectLanguage}" hc:TitleElement.Title="{ext:Loc SelectLanguageTitle}" Margin="10,0"/>
+                <control:BindableAvalonEditor Text="{Binding Snippet, UpdateSourceTrigger=PropertyChanged}" SyntaxHighlighting="{Binding ElementName=cmb, Path=SelectedItem}" WordWrap="True" ShowLineNumbers="True" Margin="10,15" Height="250"/>
+                <StackPanel HorizontalAlignment="Center" Margin="10,10" Orientation="Horizontal">
+                    <Button IsEnabled="{Binding IsEnabled}" Command="{Binding CreateCommand}" Content="{ext:Loc Create}" Width="180" IsDefault="True" Height="35" hc:IconElement.Geometry="{DynamicResource AddGeometry}" hc:IconElement.Width="18" hc:IconElement.Height="18"/>
+                    <Button IsEnabled="{Binding IsEnabled}" Command="{Binding ClearCommand}" Margin="10,0" Content="{ext:Loc Clear}" IsCancel="True" Width="180" IsDefault="True" Height="35" hc:IconElement.Geometry="{DynamicResource DeleteGeometry}" hc:IconElement.Width="18" hc:IconElement.Height="18"/>
+                </StackPanel>
+                <Grid>
+                    <hc:Shield Color="{DynamicResource DangerBrush}" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="14" Margin="10" Subject="{ext:Loc ShieldSubject}" Status="{Binding SnippetUrl}"
+                                       Cursor="Hand" Command="hc:ControlCommands.OpenLink" CommandParameter="{Binding SnippetUrl}"/>
+                    <Rectangle
+                                    Width="450"
+                                    Height="80"
+                                    RadiusX="4"
+                                    RadiusY="4"
+                                    Stroke="{StaticResource BorderBrush}"
+                                    StrokeDashArray="2,2" />
+                    <Grid.Style>
+                        <Style TargetType="Grid">
+                            <Setter Property="Visibility" Value="Visible"/>
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding SnippetUrl}" Value="{x:Null}">
+                                    <Setter Property="Visibility" Value="Hidden" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Grid.Style>
+                </Grid>
+            </StackPanel>
+        </hc:ScrollViewer>
+    </hc:TransitioningContentControl>
 </UserControl>
