--- a/CodeHubDesktop/Views/SnippetHistory.xaml
+++ b/CodeHubDesktop/Views/SnippetHistory.xaml
@@ -1,9 +1,38 @@
 ﻿<UserControl x:Class="CodeHubDesktop.Views.SnippetHistory"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:prism="http://prismlibrary.com/"             
+             xmlns:prism="http://prismlibrary.com/"  
+             xmlns:hc="https://handyorg.github.io/handycontrol"
+             xmlns:control="clr-namespace:CodeHubDesktop.Controls"
+             xmlns:lang="clr-namespace:CodeHubDesktop.MultiLanguage.Language"
+             xmlns:ext="clr-namespace:CodeHubDesktop.DynamicLanguage" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             ext:Translation.ResourceManager="{x:Static lang:Lang.ResourceManager}"
              prism:ViewModelLocator.AutoWireViewModel="True">
-    <Grid>
-            
-    </Grid>
+    <hc:TransitioningContentControl>
+        <Border hc:ScrollViewer.IsInertiaEnabled="True" Background="{DynamicResource RegionBrush}" Margin="16" CornerRadius="10" Effect="{StaticResource EffectShadow4}">
+            <TabControl Margin="0,10" Style="{StaticResource TabControlInLine}" Background="Transparent">
+                <TabItem Header="{ext:Loc TabLocal}">
+
+                </TabItem>
+                <TabItem Header="{ext:Loc TabOther}">
+                    <hc:ScrollViewer>
+                        <StackPanel Margin="10">
+                            <hc:SearchBar FlowDirection="LeftToRight" Style="{StaticResource SearchBarExtend}" hc:InfoElement.Necessary="True" Margin="10,0" hc:InfoElement.Placeholder="Enter SID..." hc:TitleElement.Title="Snippet Id"/>
+                            <StackPanel FlowDirection="LeftToRight" Orientation="Horizontal">
+                                <hc:Shield Name="lang" Color="{DynamicResource DangerBrush}" FontSize="14" Margin="10" Subject="Language" Status="C#"/>
+                                <hc:Shield Color="{DynamicResource DangerBrush}" FontSize="14" Margin="10" Subject="Date" Status="C#"/>
+                                <hc:Shield Color="{DynamicResource DangerBrush}" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="14" Margin="10" Subject="Link" Status="Link"
+                                       Cursor="Hand" Command="hc:ControlCommands.OpenLink" CommandParameter="{Binding SnippetUrl}"/>
+
+                            </StackPanel>
+                            <hc:TextBox Margin="10,0" hc:InfoElement.Placeholder="{ext:Loc Subject}" hc:TitleElement.Title="{ext:Loc SubjectTitle}"/>
+                            <hc:TextBox TextWrapping="Wrap" TextAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Top" Margin="10" Height="150" hc:InfoElement.Placeholder="{ext:Loc Detail}" hc:TitleElement.Title="{ext:Loc DetailTitle}"/>
+
+                            <control:BindableAvalonEditor SyntaxHighlighting="{Binding ElementName=lang, Path=Status}" WordWrap="True" ShowLineNumbers="True" Margin="10,15" Height="250"/>
+                        </StackPanel>
+                    </hc:ScrollViewer>
+                </TabItem>
+            </TabControl>
+        </Border>
+    </hc:TransitioningContentControl>
 </UserControl>
