--- a/CodeHubDesktop/Views/Settings.xaml
+++ b/CodeHubDesktop/Views/Settings.xaml
@@ -1,9 +1,16 @@
 ﻿<UserControl x:Class="CodeHubDesktop.Views.Settings"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:prism="http://prismlibrary.com/"             
+             xmlns:prism="http://prismlibrary.com/"   
+             xmlns:hc="https://handyorg.github.io/handycontrol"
+             xmlns:lang="clr-namespace:CodeHubDesktop.MultiLanguage.Language"
+             xmlns:ext="clr-namespace:CodeHubDesktop.DynamicLanguage" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             ext:Translation.ResourceManager="{x:Static lang:Lang.ResourceManager}"
              prism:ViewModelLocator.AutoWireViewModel="True">
-    <Grid>
-            
-    </Grid>
+    <hc:TransitioningContentControl>
+        <StackPanel>
+            <hc:Divider Content="{ext:Loc General}"/>
+            <ToggleButton x:Name="tg" Style="{StaticResource ToggleButtonSwitch}" Content="{ext:Loc SettingStoreSnippet}" IsChecked="{Binding GetIsCheckedToggle}" Command="{Binding StoreSnippetCommand}" CommandParameter="{Binding IsChecked, RelativeSource={RelativeSource Self}}" />
+        </StackPanel>
+    </hc:TransitioningContentControl>
 </UserControl>
