--- a/CodeHubDesktop/Views/SnippetHistory.xaml
+++ b/CodeHubDesktop/Views/SnippetHistory.xaml
@@ -17,18 +17,24 @@
                 <TabItem Header="{ext:Loc TabOther}">
                     <hc:ScrollViewer>
                         <StackPanel Margin="10">
-                            <hc:SearchBar FlowDirection="LeftToRight" Style="{StaticResource SearchBarExtend}" hc:InfoElement.Necessary="True" Margin="10,0" hc:InfoElement.Placeholder="Enter SID..." hc:TitleElement.Title="Snippet Id"/>
-                            <StackPanel FlowDirection="LeftToRight" Orientation="Horizontal">
-                                <hc:Shield Name="lang" Color="{DynamicResource DangerBrush}" FontSize="14" Margin="10" Subject="Language" Status="C#"/>
-                                <hc:Shield Color="{DynamicResource DangerBrush}" FontSize="14" Margin="10" Subject="Date" Status="C#"/>
-                                <hc:Shield Color="{DynamicResource DangerBrush}" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="14" Margin="10" Subject="Link" Status="Link"
+                            <hc:SearchBar Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource SearchBarExtend}" hc:InfoElement.Necessary="True" Margin="10,0" hc:InfoElement.Placeholder="{ext:Loc SearchbarPlaceHolder}" hc:TitleElement.Title="{ext:Loc SearchbarTitle}">
+                                <hc:Interaction.Triggers>
+                                    <hc:EventTrigger EventName="SearchStarted">
+                                        <hc:EventToCommand Command="{Binding OnSearchStartedCommand}" PassEventArgsToCommand="True"/>
+                                    </hc:EventTrigger>
+                                </hc:Interaction.Triggers>
+                            </hc:SearchBar>
+                            <hc:Shield Visibility="{Binding PanelVisibility}" Color="{DynamicResource DangerBrush}" VerticalAlignment="Center" FontSize="14" Margin="10,20,10,10" Subject="{ext:Loc HistoryLink}" Status="{Binding SnippetUrl}"
                                        Cursor="Hand" Command="hc:ControlCommands.OpenLink" CommandParameter="{Binding SnippetUrl}"/>
+                            <StackPanel Margin="0,0,0,10" Visibility="{Binding PanelVisibility}" Orientation="Horizontal">
+                                <hc:Shield Name="lang" Color="{DynamicResource DangerBrush}" FontSize="14" Margin="10,0" Subject="{ext:Loc HistoryLanguage}" Status="{Binding SnippetLanguage}"/>
+                                <hc:Shield Color="{DynamicResource DangerBrush}" FontSize="14" Subject="{ext:Loc HistoryDate}" Status="{Binding SnippetDate}"/>
 
                             </StackPanel>
-                            <hc:TextBox Margin="10,0" hc:InfoElement.Placeholder="{ext:Loc Subject}" hc:TitleElement.Title="{ext:Loc SubjectTitle}"/>
-                            <hc:TextBox TextWrapping="Wrap" TextAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Top" Margin="10" Height="150" hc:InfoElement.Placeholder="{ext:Loc Detail}" hc:TitleElement.Title="{ext:Loc DetailTitle}"/>
+                            <hc:TextBox Visibility="{Binding PanelVisibility}" IsReadOnly="True" Text="{Binding SnippetTitle, UpdateSourceTrigger=PropertyChanged}" Margin="10,0" hc:InfoElement.Placeholder="{ext:Loc Subject}" hc:TitleElement.Title="{ext:Loc SubjectTitle}"/>
+                            <hc:TextBox Visibility="{Binding PanelVisibility}" IsReadOnly="True" Text="{Binding SnippetDetail, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" TextAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Top" Margin="10" Height="150" hc:InfoElement.Placeholder="{ext:Loc Detail}" hc:TitleElement.Title="{ext:Loc DetailTitle}"/>
 
-                            <control:BindableAvalonEditor SyntaxHighlighting="{Binding ElementName=lang, Path=Status}" WordWrap="True" ShowLineNumbers="True" Margin="10,15" Height="250"/>
+                            <control:BindableAvalonEditor Visibility="{Binding PanelVisibility}" Text="{Binding SnippetScript, UpdateSourceTrigger=PropertyChanged}" IsReadOnly="True" SyntaxHighlighting="{Binding ElementName=lang, Path=Status}" WordWrap="True" ShowLineNumbers="True" Margin="10,15" Height="250"/>
                         </StackPanel>
                     </hc:ScrollViewer>
                 </TabItem>
