--- a/CodeHubDesktop/App.xaml
+++ b/CodeHubDesktop/App.xaml
@@ -2,12 +2,10 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:hc="https://handyorg.github.io/handycontrol"
-             xmlns:prism="http://prismlibrary.com/" xmlns:ui="http://schemas.modernwpf.com/2019">
+             xmlns:prism="http://prismlibrary.com/">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ui:ThemeResources />
-                <ui:XamlControlsResources />
                 <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/SkinDefault.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/Theme.xaml"/>
                 <ResourceDictionary Source="/Resources/Font/FontsDictionary.xaml"/>
@@ -24,11 +22,11 @@
                 </DrawingBrush.Drawing>
             </DrawingBrush>
 
-            <Style x:Key="ListBoxItemTransparent" BasedOn="{StaticResource ListBoxItemModernBaseStyle}" TargetType="ListBoxItem">
+            <Style x:Key="ListBoxItemTransparent" BasedOn="{StaticResource ListBoxItemBaseStyle}" TargetType="ListBoxItem">
                 <Setter Property="hc:BorderElement.CornerRadius" Value="4"/>
                 <Setter Property="Background" Value="Transparent"/>
             </Style>
-            <Style x:Key="ListBoxTransparent" BasedOn="{StaticResource ListBoxBaseModernStyle}" TargetType="ListBox">
+            <Style x:Key="ListBoxTransparent" BasedOn="{StaticResource ListBoxBaseStyle}" TargetType="ListBox">
                 <Setter Property="Background" Value="Transparent"/>
                 <Setter Property="ItemContainerStyle" Value="{StaticResource ListBoxItemTransparent}"/>
             </Style>
