--- a/CodeHubDesktop/Views/LeftMainContent.xaml
+++ b/CodeHubDesktop/Views/LeftMainContent.xaml
@@ -1,56 +1,30 @@
-﻿<UserControl x:Class="CodeHubDesktop.Views.LeftMainContent"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:prism="http://prismlibrary.com/"     
-             xmlns:lang="clr-namespace:CodeHubDesktop.MultiLanguage.Language"
-             xmlns:ext="clr-namespace:CodeHubDesktop.DynamicLanguage" 
-             xmlns:ui="http://schemas.modernwpf.com/2019" 
-             xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls" 
-             xmlns:hc="https://handyorg.github.io/handycontrol"
-             ext:Translation.ResourceManager="{x:Static lang:Lang.ResourceManager}"
-             xmlns:control="clr-namespace:CodeHubDesktop.Controls"
-             prism:ViewModelLocator.AutoWireViewModel="True">
-    <control:MyHamburgerMenu Width="210" MaxWidth="230" PaneFontFamily="{StaticResource IRANSans}" ItemCommand="{Binding SwitchItemCmd}" OptionsItemCommand="{Binding SwitchItemOptionCmd}" SelectedIndex="1" PaneTitle="{ext:Loc PaneTitle}" IsPaneOpen="True">
-        <mah:HamburgerMenu.ItemsSource>
-            <mah:HamburgerMenuItemCollection>
-                <mah:HamburgerMenuHeaderItem Label="{ext:Loc HamburgerMenuHeaderItem}" />
-
-                <mah:HamburgerMenuIconItem Tag="CreateSnippet" Label="{ext:Loc CreateSnippet}">
-                    <mah:HamburgerMenuIconItem.Icon>
-                        <ui:FontIcon Glyph="&#xE710;" />
-                    </mah:HamburgerMenuIconItem.Icon>
-                </mah:HamburgerMenuIconItem>
-
-                <mah:HamburgerMenuIconItem Tag="SnippetHistory" Label="{ext:Loc SnippetHistory}">
-                    <mah:HamburgerMenuIconItem.Icon>
-                        <ui:FontIcon Glyph="&#xE81C;" />
-                    </mah:HamburgerMenuIconItem.Icon>
-                </mah:HamburgerMenuIconItem>
-
-                <mah:HamburgerMenuIconItem Tag="CheckUpdate" Label="{ext:Loc Update}">
-                    <mah:HamburgerMenuIconItem.Icon>
-                        <ui:SymbolIcon Symbol="PostUpdate" />
-                    </mah:HamburgerMenuIconItem.Icon>
-                </mah:HamburgerMenuIconItem>
-
-                <mah:HamburgerMenuIconItem Tag="About" Label="{ext:Loc About}">
-                    <mah:HamburgerMenuIconItem.Icon>
-                        <ui:SymbolIcon Symbol="Admin" />
-                    </mah:HamburgerMenuIconItem.Icon>
-                </mah:HamburgerMenuIconItem>
-
-            </mah:HamburgerMenuItemCollection>
-        </mah:HamburgerMenu.ItemsSource>
-
-        <mah:HamburgerMenu.OptionsItemsSource>
-            <mah:HamburgerMenuItemCollection>
-                <mah:HamburgerMenuIconItem Tag="Settings" Label="{ext:Loc Settings}">
-                    <mah:HamburgerMenuIconItem.Icon>
-                        <ui:SymbolIcon Symbol="Setting" />
-                    </mah:HamburgerMenuIconItem.Icon>
-                </mah:HamburgerMenuIconItem>
-            </mah:HamburgerMenuItemCollection>
-        </mah:HamburgerMenu.OptionsItemsSource>
-        
-    </control:MyHamburgerMenu>
-</UserControl>
+﻿<Border x:Class="CodeHubDesktop.Views.LeftMainContent"
+        hc:ScrollViewer.IsInertiaEnabled="True"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:prism="http://prismlibrary.com/"             
+        prism:ViewModelLocator.AutoWireViewModel="True"
+        Background="{DynamicResource RegionBrush}"
+        xmlns:lang="clr-namespace:CodeHubDesktop.MultiLanguage.Language"
+        xmlns:ext="clr-namespace:CodeHubDesktop.DynamicLanguage" 
+        xmlns:hc="https://handyorg.github.io/handycontrol"
+        ext:Translation.ResourceManager="{x:Static lang:Lang.ResourceManager}"
+        Margin="16"
+        CornerRadius="10"
+        Effect="{StaticResource EffectShadow4}">
+    <DockPanel>
+        <ListBox SelectedIndex="0" VirtualizingStackPanel.IsVirtualizing="True" BorderThickness="0" SelectionMode="Single" Style="{StaticResource ListBoxTransparent}">
+            <ListBoxItem Tag="CreateSnippet" Margin="10,15,10,0" Content="{ext:Loc CreateSnippet}"/>
+            <ListBoxItem Tag="SnippetOnline" Margin="10,5,10,0" Content="{ext:Loc SnippetOnline}"/>
+            <ListBoxItem Tag="SnippetHistory" Margin="10,5,10,0" Content="{ext:Loc SnippetHistory}"/>
+            <ListBoxItem Tag="CheckUpdate" Margin="10,5,10,0" Content="{ext:Loc Update}"/>
+            <ListBoxItem Tag="About" Margin="10,5,10,0" Content="{ext:Loc About}"/>
+            <ListBoxItem Tag="Settings" Margin="10,5,10,0" Content="{ext:Loc Settings}"/>
+            <hc:Interaction.Triggers>
+                <hc:EventTrigger EventName="SelectionChanged">
+                    <hc:EventToCommand Command="{Binding SwitchItemCmd}" PassEventArgsToCommand="True"/>
+                </hc:EventTrigger>
+            </hc:Interaction.Triggers>
+        </ListBox>
+    </DockPanel>
+</Border>
