--- a/CodeHubDesktop/Views/MainWindow.xaml
+++ b/CodeHubDesktop/Views/MainWindow.xaml
@@ -5,8 +5,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:hc="https://handyorg.github.io/handycontrol"
         xmlns:prism="http://prismlibrary.com/" 
-        xmlns:ui="http://schemas.modernwpf.com/2019" 
-        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
         prism:ViewModelLocator.AutoWireViewModel="True"
         xmlns:lang="clr-namespace:CodeHubDesktop.MultiLanguage.Language"
         xmlns:ext="clr-namespace:CodeHubDesktop.DynamicLanguage"
@@ -28,30 +26,28 @@
             <Button HorizontalAlignment="Right" Grid.Column="1" Click="ButtonConfig_OnClick" Name="ButtonConfig" Style="{StaticResource ButtonIcon}" Foreground="{DynamicResource PrimaryTextBrush}" hc:IconElement.Geometry="{StaticResource ConfigGeometry}"/>
             <Popup AllowsTransparency="True" Grid.Column="1" PlacementTarget="{Binding ElementName=ButtonConfig}" HorizontalOffset="-25" Name="PopupConfig" VerticalOffset="6" StaysOpen="False">
                 <Border Background="{DynamicResource SecondaryRegionBrush}" CornerRadius="4" Margin="16" Effect="{StaticResource EffectShadow2}">
-                    <StackPanel>
-                        <StackPanel Orientation="Horizontal">
-                            <StackPanel Button.Click="ButtonLangs_OnClick" Margin="10,10,0,10">
-                                <Button Tag="fa-IR" Style="{StaticResource ButtonCustom}">
-                                    <Image Width="32" Source="/CodeHubDesktop;component/Resources/Img/Flag/fa.png"/>
-                                </Button>
-                                <Button Tag="en-US" Style="{StaticResource ButtonCustom}" Margin="0,10,0,0">
-                                    <Image Width="32" Source="/CodeHubDesktop;component/Resources/Img/Flag/en.png"/>
-                                </Button>
-                            </StackPanel>
-                            <StackPanel Button.Click="ButtonSkins_OnClick"  Margin="10,10,10,10">
-                                <Button Tag="{x:Static hc:SkinType.Default}" Style="{StaticResource ButtonCustom}">
-                                    <Border Background="White" Width="32" Height="21" CornerRadius="2" BorderThickness="1" BorderBrush="{DynamicResource BorderBrush}"/>
-                                </Button>
-                                <Button Tag="{x:Static hc:SkinType.Dark}" Style="{StaticResource ButtonCustom}" Margin="0,10,0,0">
-                                    <Border Background="Black" Width="32" Height="21" CornerRadius="2" BorderThickness="1" BorderBrush="{DynamicResource BorderBrush}"/>
-                                </Button>
-                                <Button Tag="{x:Static hc:SkinType.Violet}" Style="{StaticResource ButtonCustom}" Margin="0,10,0,0">
-                                    <Border Background="DarkViolet" Width="32" Height="21" CornerRadius="2" BorderThickness="1" BorderBrush="{DynamicResource BorderBrush}"/>
-                                </Button>
-                            </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <StackPanel Button.Click="ButtonLangs_OnClick" Margin="10,10,0,10">
+                            <Button Tag="fa-IR" Style="{StaticResource ButtonCustom}">
+                                <Image Width="32" Source="/CodeHubDesktop;component/Resources/Img/Flag/fa.png"/>
+                            </Button>
+                            <Button Tag="en-US" Style="{StaticResource ButtonCustom}" Margin="0,10,0,0">
+                                <Image Width="32" Source="/CodeHubDesktop;component/Resources/Img/Flag/en.png"/>
+                            </Button>
                         </StackPanel>
-                        <ToggleButton x:Name="tg" Margin="10" Checked="ToggleButton_Checked" Unchecked="ToggleButton_Checked" Style="{StaticResource ToggleButtonSwitch}" Content="{ext:Loc ModernStyle}"/>
+                        <StackPanel Button.Click="ButtonSkins_OnClick"  Margin="10,10,10,10">
+                            <Button Tag="{x:Static hc:SkinType.Default}" Style="{StaticResource ButtonCustom}">
+                                <Border Background="White" Width="32" Height="21" CornerRadius="2" BorderThickness="1" BorderBrush="{DynamicResource BorderBrush}"/>
+                            </Button>
+                            <Button Tag="{x:Static hc:SkinType.Dark}" Style="{StaticResource ButtonCustom}" Margin="0,10,0,0">
+                                <Border Background="Black" Width="32" Height="21" CornerRadius="2" BorderThickness="1" BorderBrush="{DynamicResource BorderBrush}"/>
+                            </Button>
+                            <Button Tag="{x:Static hc:SkinType.Violet}" Style="{StaticResource ButtonCustom}" Margin="0,10,0,0">
+                                <Border Background="DarkViolet" Width="32" Height="21" CornerRadius="2" BorderThickness="1" BorderBrush="{DynamicResource BorderBrush}"/>
+                            </Button>
+                        </StackPanel>
                     </StackPanel>
+
                 </Border>
             </Popup>
         </Grid>
@@ -59,11 +55,10 @@
     <Border BorderThickness="0,1,0,0" BorderBrush="{DynamicResource BorderBrush}" Background="{StaticResource CloudDrawingBrush}">
         <Grid FlowDirection="{Binding MainFlowDirection}">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="240" MinWidth="240" MaxWidth="400"/>
                 <ColumnDefinition MinWidth="200"/>
             </Grid.ColumnDefinitions>
-            <userControl:LeftMainContent x:Name="left"/>
-            <userControl:LeftMainContent2 x:Name="left2"/>
+            <userControl:LeftMainContent/>
             <ContentControl prism:RegionManager.RegionName="ContentRegion" Grid.Column="1"/>
             <GridSplitter Margin="0,26,10,26" Grid.Column="0" HorizontalAlignment="Right" Width="4" Background="Transparent"/>
             <hc:ScrollViewer Grid.Column="1" VerticalScrollBarVisibility="Hidden" HorizontalAlignment="Right" IsInertiaEnabled="True" IsPenetrating="True">
