--- a/CodeHubDesktop/Views/CreateSnippet.xaml
+++ b/CodeHubDesktop/Views/CreateSnippet.xaml
@@ -8,13 +8,16 @@
              xmlns:ext="clr-namespace:CodeHubDesktop.DynamicLanguage"
              ext:Translation.ResourceManager="{x:Static lang:Lang.ResourceManager}"
              prism:ViewModelLocator.AutoWireViewModel="True">
+    <UserControl.Resources>
+        <control:HighlightingDefinitionConverter x:Key="HighlightingDefinitionConverter"/>
+    </UserControl.Resources>
     <hc:TransitioningContentControl>
         <hc:ScrollViewer>
             <StackPanel Margin="10">
                 <hc:TextBox Margin="10,0" Text="{Binding Subject, UpdateSourceTrigger=PropertyChanged}" hc:InfoElement.Placeholder="{ext:Loc Subject}" hc:TitleElement.Title="{ext:Loc SubjectTitle}"/>
                 <hc:TextBox Text="{Binding Detail, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" TextAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Top" Margin="10" Height="100" hc:InfoElement.Placeholder="{ext:Loc Detail}" hc:TitleElement.Title="{ext:Loc DetailTitle}"/>
-                <hc:ComboBox SelectedItem="{Binding SelectedCode, UpdateSourceTrigger=PropertyChanged}" IsEditable="True" Name="cmb" ItemsSource="{Binding LanguageList}" hc:InfoElement.Placeholder="{ext:Loc SelectLanguage}" hc:TitleElement.Title="{ext:Loc SelectLanguageTitle}" Margin="10,0"/>
-                <control:BindableAvalonEditor Text="{Binding Snippet, UpdateSourceTrigger=PropertyChanged}" SyntaxHighlighting="{Binding ElementName=cmb, Path=SelectedItem}" WordWrap="True" ShowLineNumbers="True" Margin="10,15" Height="200"/>
+                <hc:ComboBox DisplayMemberPath="DisplayName" SelectedValuePath="Name" SelectedValue="true" SelectedItem="{Binding SelectedCode, UpdateSourceTrigger=PropertyChanged}" IsEditable="True" Name="cmb" ItemsSource="{Binding LanguageList}" hc:InfoElement.Placeholder="{ext:Loc SelectLanguage}" hc:TitleElement.Title="{ext:Loc SelectLanguageTitle}" Margin="10,0"/>
+                <control:BindableAvalonEditor Text="{Binding Snippet, UpdateSourceTrigger=PropertyChanged}" SyntaxHighlighting="{Binding ElementName=cmb, Path=SelectedItem, Converter={StaticResource HighlightingDefinitionConverter}}" WordWrap="True" ShowLineNumbers="True" Margin="10,15" Height="200"/>
                 <hc:TextBox Text="{Binding Error, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" TextAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Top" Margin="10,0" Height="100" hc:InfoElement.Placeholder="{ext:Loc Error}" hc:TitleElement.Title="{ext:Loc ErrorTitle}"/>
 
                 <StackPanel HorizontalAlignment="Center" Margin="10,10" Orientation="Horizontal">
