--- a/CodeHubDesktop/Views/SnippetOnline.xaml
+++ b/CodeHubDesktop/Views/SnippetOnline.xaml
@@ -8,6 +8,9 @@
              ext:Translation.ResourceManager="{x:Static lang:Lang.ResourceManager}"
              xmlns:control="clr-namespace:CodeHubDesktop.Controls"
              prism:ViewModelLocator.AutoWireViewModel="True">
+    <UserControl.Resources>
+        <control:HighlightingDefinitionConverter x:Key="HighlightingDefinitionConverter"/>
+    </UserControl.Resources>
     <hc:TransitioningContentControl>
         <Border hc:ScrollViewer.IsInertiaEnabled="True" Background="{DynamicResource RegionBrush}" Margin="16" CornerRadius="10" Effect="{StaticResource EffectShadow4}">
             <hc:ScrollViewer>
@@ -30,7 +33,7 @@
                     <hc:TextBox Visibility="{Binding PanelVisibility}" IsReadOnly="True" Text="{Binding SnippetDetail, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" TextAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Top" Margin="10" Height="150" hc:InfoElement.Placeholder="{ext:Loc Detail}" hc:TitleElement.Title="{ext:Loc DetailTitle}"/>
                     <hc:TextBox Visibility="{Binding PanelVisibility}" IsReadOnly="True" Text="{Binding Error, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" TextAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Top" Margin="10" Height="100" hc:InfoElement.Placeholder="{ext:Loc Error}" hc:TitleElement.Title="{ext:Loc ErrorTitle}"/>
 
-                    <control:BindableAvalonEditor Visibility="{Binding PanelVisibility}" Text="{Binding SnippetScript, UpdateSourceTrigger=PropertyChanged}" IsReadOnly="True" SyntaxHighlighting="{Binding ElementName=lang, Path=Status}" WordWrap="True" ShowLineNumbers="True" Margin="10,5" Height="250"/>
+                    <control:BindableAvalonEditor Visibility="{Binding PanelVisibility}" Text="{Binding SnippetScript, UpdateSourceTrigger=PropertyChanged}" IsReadOnly="True" SyntaxHighlighting="{Binding ElementName=lang, Path=Status, Converter={StaticResource HighlightingDefinitionConverter}}" WordWrap="True" ShowLineNumbers="True" Margin="10,5" Height="250"/>
 
                 </StackPanel>
             </hc:ScrollViewer>
